small fixes for touchui compat
fixes navbar scroll
fixes settings headings text being white
fixes help and main text being too light

--- a/octoprint_cyborgtheme/static/css/overrides.css
+++ b/octoprint_cyborgtheme/static/css/overrides.css
@@ -301,3 +301,23 @@ textarea::-webkit-input-placeholder {
 input[type="file"] {
     height: 20px;
 }
+
+/*touchui fixes*/
+
+/*page headings*/
+#touch h3 {
+    color: black;
+    font-weight: bold;
+}
+/*page text labels*/
+#touch legend, #touch label {
+    color: black;
+}
+/*help text*/
+#touch .help-block, #touch .help-inline {
+    color: #595959;
+}
+/*previous navbar min width fix still works on regular browsers but caused touchui to have to scroll, this is my dirty workaround*/
+#touch .navbar {
+	min-width: 1px;
+}
